# libR-sys

./: .gitignore  .ignore  .travis.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS_GUIDE.md  README-old-windows.md  README.md  bindings.tar.xz  build.rs  mini_Rcomplex.h  mini_wrapper.h  nonAPI.txt  wrapper.h  wrapper_complex.c
.cargo/: config  config.toml
.github/workflows/: doc.yml  msrv.yml  non-api-call.yml  test.yml
bindings/: bindings-Altrep-linux-x86_64-R4.2.rs  bindings-Altrep-macos-aarch64-R4.2.rs  bindings-Altrep-macos-aarch64-R4.4.rs  bindings-Altrep-macos-aarch64-R4.5-devel.rs  bindings-Altrep-macos-aarch64.rs  bindings-Altrep-windows-x86_64-R4.2.rs  bindings-Altrep-windows-x86_64-R4.3.rs  bindings-Altrep-windows-x86_64-R4.4.rs  bindings-Altrep-windows-x86_64-R4.5-devel.rs  bindings-Applic-linux-aarch64-R4.3.rs  bindings-Applic-linux-x86_64-R4.2.rs  bindings-Applic-macos-aarch64-R4.5-devel.rs  bindings-Applic-macos-aarch64.rs  bindings-Applic-macos-x86_64-R4.2.rs  bindings-Applic-macos-x86_64-R4.4.rs  bindings-Applic-windows-x86_64-R4.2.rs  bindings-Applic-windows-x86_64-R4.3.rs  bindings-Applic-windows-x86_64-R4.4.rs  bindings-Applic-windows-x86_64-R4.5-devel.rs  bindings-Arith-linux-aarch64-R4.2.rs  bindings-Arith-macos-aarch64-R4.3.rs  bindings-Arith-macos-aarch64-R4.5-devel.rs  bindings-Arith-macos-aarch64.rs  bindings-Arith-macos-x86_64-R4.2.rs  bindings-Arith-macos-x86_64-R4.4.rs  bindings-Arith-windows-x86_64-R4.2.rs  bindings-Arith-windows-x86_64-R4.3.rs  bindings-Arith-windows-x86_64-R4.4.rs  bindings-Arith-windows-x86_64-R4.5-devel.rs  bindings-BLAS-linux-aarch64-R4.3.rs  bindings-BLAS-linux-aarch64-R4.4.rs  bindings-BLAS-linux-x86_64-R4.2.rs  bindings-BLAS-linux-x86_64-R4.5-devel.rs  bindings-BLAS-macos-aarch64-R4.2.rs  bindings-BLAS-macos-aarch64-R4.3.rs  bindings-BLAS-macos-aarch64-R4.4.rs  bindings-BLAS-macos-aarch64-R4.5-devel.rs  bindings-BLAS-macos-aarch64.rs  bindings-BLAS-windows-x86_64-R4.2.rs  bindings-BLAS-windows-x86_64-R4.3.rs  (+474 more)
master/: aliases.js  search-index.js  settings.html  source-files.js
master/implementors/core/clone/: trait.Clone.js
master/implementors/core/fmt/: trait.Debug.js
master/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
master/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
master/libR_sys/: constant.AIO_PRIO_DELTA_MAX.html  constant.ANYSXP.html  constant.ARG_MAX.html  constant.BCODESXP.html  constant.BC_BASE_MAX.html  constant.BC_DIM_MAX.html  constant.BC_SCALE_MAX.html  constant.BC_STRING_MAX.html  constant.BUFSIZ.html  constant.BUILTINSXP.html  constant.CHARCLASS_NAME_MAX.html  constant.CHARSXP.html  constant.CLOSXP.html  constant.COLL_WEIGHTS_MAX.html  constant.CPLXSXP.html  constant.DELAYTIMER_MAX.html  constant.DOMAIN.html  constant.DOTSXP.html  constant.ENABLE_NLS.html  constant.ENVSXP.html  constant.EOF.html  constant.EXPRSXP.html  constant.EXPR_NEST_MAX.html  constant.EXTPTRSXP.html  constant.FILENAME_MAX.html  constant.FOPEN_MAX.html  constant.FP_ILOGB0.html  constant.FP_ILOGBNAN.html  constant.FP_INFINITE.html  constant.FP_NAN.html  constant.FP_NORMAL.html  constant.FP_SUBNORMAL.html  constant.FP_ZERO.html  constant.FREESXP.html  constant.FUNSXP.html  constant.HAVE_ALLOCA_H.html  constant.HAVE_F77_UNDERSCORE.html  constant.HAVE_VISIBILITY_ATTRIBUTE.html  constant.HOST_NAME_MAX.html  constant.IEEE_754.html  (+1419 more)
master/src/libR_sys/: lib.rs.html
src/: lib.rs  tests.rs
src/bindings/: bindings-Altrep-linux-aarch64-R4.3.rs  bindings-Altrep-linux-aarch64-R4.4.rs  bindings-Altrep-linux-aarch64-R4.5-devel.rs  bindings-Altrep-linux-x86_64-R4.3.rs  bindings-Altrep-linux-x86_64-R4.4.rs  bindings-Altrep-linux-x86_64-R4.5-devel.rs  bindings-Altrep-macos-aarch64-R4.3.rs  bindings-Altrep-macos-aarch64-R4.4.rs  bindings-Altrep-macos-aarch64-R4.5-devel.rs  bindings-Altrep-macos-aarch64.rs  bindings-Altrep-macos-x86_64-R4.4.rs  bindings-Altrep-windows-x86_64-R4.3.rs  bindings-Altrep-windows-x86_64-R4.4.rs  bindings-Altrep-windows-x86_64-R4.5-devel.rs  bindings-Applic-linux-aarch64-R4.4.rs  bindings-Applic-linux-aarch64-R4.5-devel.rs  bindings-Applic-linux-x86_64-R4.4.rs  bindings-Applic-macos-aarch64-R4.3.rs  bindings-Applic-macos-aarch64-R4.5-devel.rs  bindings-Applic-macos-x86_64-R4.4.rs  bindings-Applic-windows-x86_64-R4.3.rs  bindings-Applic-windows-x86_64-R4.4.rs  bindings-Applic-windows-x86_64-R4.5-devel.rs  bindings-Arith-linux-aarch64-R4.4.rs  bindings-Arith-linux-x86_64-R4.3.rs  bindings-Arith-linux-x86_64-R4.4.rs  bindings-Arith-linux-x86_64-R4.5-devel.rs  bindings-Arith-macos-aarch64-R4.3.rs  bindings-Arith-macos-aarch64-R4.4.rs  bindings-Arith-macos-aarch64-R4.5-devel.rs  bindings-Arith-windows-x86_64-R4.3.rs  bindings-Arith-windows-x86_64-R4.4.rs  bindings-Arith-windows-x86_64-R4.5-devel.rs  bindings-BLAS-linux-x86_64-R4.4.rs  bindings-BLAS-macos-aarch64-R4.3.rs  bindings-BLAS-macos-aarch64-R4.4.rs  bindings-BLAS-macos-aarch64-R4.5-devel.rs  bindings-BLAS-windows-x86_64-R4.3.rs  bindings-BLAS-windows-x86_64-R4.4.rs  bindings-BLAS-windows-x86_64-R4.5-devel.rs  (+374 more)
