[package]
name = "libR-sys"
version = "0.7.0"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Thomas Down",
    "Mossa Merhi Reimert <mossa@sund.ku.dk>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Ilia A. Kosenkov <ilia.kosenkov@outlook.com>",
    "Hiroaki Yutani",
]
edition = "2021"
description = "Low level bindings to the R programming language."
license = "MIT"
links = "R"
documentation = "https://docs.rs/libR-sys/latest/libR_sys/"
repository = "https://github.com/extendr/libR-sys"

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.4", optional = true, features = ["experimental"] }
regex = { version = "*", optional = true, default-features = false }
fs_extra = "1.3"

[features]
default = ["runtime"]
# By default, we use pre-computed bindings that ship with the library. This may fail!
# Turn on the 'use-bindgen' feature to generate bindings on the fly for your platform.
use-bindgen = ["bindgen", "regex"]

# retain non-API bindings from R (requires build-time generation of bindings)
non-api = ["use-bindgen"]

runtime = ["bindgen/runtime"]

# Enables generation of layout-tests in bindgen
layout_tests = ["use-bindgen"]

# TODO: include default headers...

# TODO:?!
# stamp-h.in
# Makefile = []
# config.in = []
# Makefile.in = []
# Makefile.win = []

# internal headers, not installed
# Rgraphics = []
# Internal.h 
# Print = []
# Parse = []
# Errormsg = []
# Startup = []
# Rconnections = []
# rlocale = []
# Fileio = []
# Graphics = []
# Rmodules/RX11
# Rmodules/Rlapack
# Rmodules/Rinternet // doesn't state that is internal...but it is...
# Rmath0.in = []
# Rinlinedfuns = []
# Defn = []
# IOStuff = []

# R_ext/*
Print = []
Parse = []
GraphicsEngine = []
Error = []
Itermacros = []
Utils = []
stats_stubs = []
GetX11Image = []
GraphicsDevice = []
Callbacks = []
Rdynload = []
RS = []
BLAS = []
Arith = []
Boolean = []
Applic = []
Linpack = []
Constants = []
Riconv = []
RStartup = []
QuartzDevice = []
libextern = []
MathThreads = []
Memory = []
Connections = []
PrtUtil = []
Altrep = []
Rallocators = []
Visibility = []
stats_package = []
Complex = []
Lapack = []
Random = []
eventloop = []
R_ext = [
    "GraphicsEngine",
    "Error",
    "Itermacros",
    "Utils",
    "stats_stubs",
    "GetX11Image",
    "GraphicsDevice",
    "Callbacks",
    "Rdynload",
    "Parse",
    "RS",
    "BLAS",
    "Arith",
    "Boolean",
    "Applic",
    "Linpack",
    "Constants",
    "Riconv",
    "RStartup",
    "Print",
    "QuartzDevice",
    "libextern",
    "MathThreads",
    "Memory",
    "Connections",
    "PrtUtil",
    "Altrep",
    "Rallocators",
    "Visibility",
    "stats_package",
    # "Makefile",
    "Complex",
    "Lapack",
    "Random",
    "eventloop",
]
# R_INCLUDES/* (in root)
libintl = []
R = []
Rconfig = []
Rdefines = []
Rembedded = []
Rinterface = []
Rinternals = []
Rmath = []
# GraphicsBase = [] # private
Rdynpriv = [] # ??

[lib]
# Some code comments on R's source code might be accidentally treated as Rust's
# doc test. See https://github.com/extendr/libR-sys/issues/194 for the details.
doctest = false
