[package]
name = "libR-sys"
version = "0.7.1"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Thomas Down",
    "Mossa Merhi Reimert <mossa@sund.ku.dk>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Ilia A. Kosenkov <ilia.kosenkov@outlook.com>",
    "Hiroaki Yutani",
]
edition = "2021"
description = "Low level bindings to the R programming language."
license = "MIT"
links = "R"
documentation = "https://docs.rs/libR-sys/latest/libR_sys/"
repository = "https://github.com/extendr/libR-sys"

[lib]
# Some code comments on R's source code might be accidentally treated as Rust's
# doc test. See https://github.com/extendr/libR-sys/issues/194 for the details.
doctest = false
